--- a/data/hyps/hyp.scratch.yaml
+++ b/data/hyps/hyp.scratch.yaml
@@ -19,16 +19,20 @@ iou_t: 0.20  # IoU training threshold
 anchor_t: 4.0  # anchor-multiple threshold
 # anchors: 3  # anchors per output layer (0 to ignore)
 fl_gamma: 0.0  # focal loss gamma (efficientDet default gamma=1.5)
-hsv_h: 0.015  # image HSV-Hue augmentation (fraction)
-hsv_s: 0.7  # image HSV-Saturation augmentation (fraction)
-hsv_v: 0.4  # image HSV-Value augmentation (fraction)
-degrees: 0.0  # image rotation (+/- deg)
-translate: 0.1  # image translation (+/- fraction)
-scale: 0.5  # image scale (+/- gain)
-shear: 0.0  # image shear (+/- deg)
-perspective: 0.0  # image perspective (+/- fraction), range 0-0.001
-flipud: 0.0  # image flip up-down (probability)
-fliplr: 0.5  # image flip left-right (probability)
-mosaic: 1.0  # image mosaic (probability)
-mixup: 0.0  # image mixup (probability)
-copy_paste: 0.0  # segment copy-paste (probability)
+max_zoom: 1.5 # maximum zoom factor
+min_zoom: 0.7 # minimum zoom factor
+prob_zoom: 0.5 # probability of zoom augmentation
+prob_cutout: 0.5 # probability of cutout augmentation
+# hsv_h: 0.015  # image HSV-Hue augmentation (fraction)
+# hsv_s: 0.7  # image HSV-Saturation augmentation (fraction)
+# hsv_v: 0.4  # image HSV-Value augmentation (fraction)
+# degrees: 0.0  # image rotation (+/- deg)
+# translate: 0.1  # image translation (+/- fraction)
+# scale: 0.5  # image scale (+/- gain)
+# shear: 0.0  # image shear (+/- deg)
+# perspective: 0.0  # image perspective (+/- fraction), range 0-0.001
+# flipud: 0.0  # image flip up-down (probability)
+# fliplr: 0.5  # image flip left-right (probability)
+# mosaic: 1.0  # image mosaic (probability)
+# mixup: 0.0  # image mixup (probability)
+# copy_paste: 0.0  # segment copy-paste (probability)
