--- a/models3D/yolo3Ds.yaml
+++ b/models3D/yolo3Ds.yaml
@@ -11,7 +11,7 @@ anchors: # depth, width, height of the anchor boxes, may need more boxes
 # - [229,211,216, 255,208,201, 310,206,168, 285,182,205, 260,231,188, 265,195,222] #, 285,206,201, 328,190,196, 266,216,215]  # P4/16
 # - [310,205,203, 260,219,242, 337,194,221, 296,237,202, 258,250,229, 293,218,228] #, 194,287,310, 327,239,231, 312,281,249]  # P5/32
 
-- [182,149,141, 292,139,144, 336,133,138, 255,155,158, 325,159,137, 293,156,156]  # P?/?
+- [182,149,141, 292,139,144, 336,133,138, 255,155,158, 325,159,137, 293,156,156]  # P2/4?
 - [332,152,155, 250,177,177, 283,173,161, 277,160,181, 306,158,172, 268,168,203]  # P3/8
 - [332,171,161, 303,178,172, 277,195,171, 337,156,179, 285,181,188, 256,201,194]  # P4/16
 - [309,176,199, 335,188,170, 336,175,187, 296,198,205, 331,207,192, 302,232,234]  # P5/32
@@ -40,7 +40,7 @@ neck:
    [-1, 1, Conv, [512, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
    [[-1, 6], 1, Concat, [1]],  # cat backbone P4
-   [-1, 3, C3, [512, False]],  # 13
+   [-1, 3, C3, [512, False]],  # 13 (P2/4 ??)
 
    [-1, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 2, 'nearest']],
