--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ data/*
 
 results*.csv
 
+# Experimental Files ---------------------------------------------------------------------------------------------------
+hyp.test.yaml
+yolo3Dtest.yaml
+
 # Datasets -------------------------------------------------------------------------------------------------------------
 coco/
 coco128/
