moving tested architecture change to main configs

--- a/models3D/yolo3Dm.yaml
+++ b/models3D/yolo3Dm.yaml
@@ -5,13 +5,7 @@ nc: 80  # number of classes
 depth_multiple: 0.67  # model depth multiple
 width_multiple: 0.75  # layer channel multiple
 
-anchors: # depth, width, height of the anchor boxes, may need more boxes
-# - [71,174,165, 308,152,151, 267,170,161, 220,186,180, 291,173,179, 261,189,184] #, 325,179,164, 289,192,188, 199,217,233]  # P?/?
-# - [71,174,165, 308,152,151, 267,170,161, 220,186,180, 291,173,179, 261,189,184] #, 325,179,164, 289,192,188, 199,217,233]  # P3/8
-# - [229,211,216, 255,208,201, 310,206,168, 285,182,205, 260,231,188, 265,195,222] #, 285,206,201, 328,190,196, 266,216,215]  # P4/16
-# - [310,205,203, 260,219,242, 337,194,221, 296,237,202, 258,250,229, 293,218,228] #, 194,287,310, 327,239,231, 312,281,249]  # P5/32
-
-- [182,149,141, 292,139,144, 336,133,138, 255,155,158, 325,159,137, 293,156,156]  # P?/?
+anchors: # depth, width, height of the anchor boxes
 - [332,152,155, 250,177,177, 283,173,161, 277,160,181, 306,158,172, 268,168,203]  # P3/8
 - [332,171,161, 303,178,172, 277,195,171, 337,156,179, 285,181,188, 256,201,194]  # P4/16
 - [309,176,199, 335,188,170, 336,175,187, 296,198,205, 331,207,192, 302,232,234]  # P5/32
@@ -33,7 +27,7 @@ backbone:
    [-1, 1, SPPF, [1024, 5]],  # 9
   ]
 
-# new Neck
+# Neck
 neck:
   # [from, number, module, args]
   [
@@ -60,5 +54,5 @@ neck:
 head:
   # [from, number, module, args]
   [
-   [[13, 17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(??, P3, P4, P5)
+   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
   ]
